<resources>
    <string name="app_name">FinalProject</string>

    <string name="house_setting">House Settings</string>
    <string name="garage">Garage</string>
    <string name="houseTemp">House Temperature</string>
    <string name="weather">Weather</string>

    <!-- Garage -->

    <string name="garageDoor">Garage Door</string>
    <string name="garageLight">Garage Lights</string>

    <string name="lightOn">On</string>
    <string name="lightOff">Off</string>
    <string name="garageBack">Return</string>
    <string name="textOff">Open</string>
    <string name="textOn">Close</string>

    <!-- House Temperature  -->

    <string name="houseTempBack">Return</string>

    <!-- Weather  -->

    <string name="currentTemp">Current Temperature</string>
    <string name="minTemp">Minimum</string>
    <string name="maxTemp">Maximum</string>

    <!-- House Settings  -->

    <string name="about">About</string>

    <string name="add_Item">Add Item</string>
    <string name="add_Text_Hint">Add Item Here...</string>
    <string name="itemListText">item_text</string>
    <string name="lamp1_activity">Turn Lamp On\/Off</string>
    <string name="lamp2_activity">Dimmable Light</string>
    <string name="lamp3_activity">Dimmable Light With Color Change</string>
    <string name="channel">Enter Channel</string>
    <string name="blinds_activity">Set Blinds</string>
    <string name="LivingRoomHelp_version">Activity Version Number 1.0.12</string>
    <string name="LivingRoomHelp_Name">Author: Jordan Mckenzie</string>
    <string name="LivingRoomHelp_How_To">The smart living room interface is used by selecting an item from the list at the main activity. You can choose one of the lamps to turn on, dim or change colour, the Television that you can turn on / off as well as change the channel, and the Blinds that you can open or close using the slider. You can also add your own item to the list, as well as delete it.</string>
    <string name="notImplemented">Sorry, this feature is not yet implemented</string>
    <string name="ok">OK</string>
    <string name="Television_onOff">Turn Television on/off</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="autoMute">Mute</string>
    <string name="autoSubmit">Submit</string>
    <string name="autoSuccessful">The submit was successful!</string>
    <string-array name="colours">
        <item>Red</item>
        <item>Blue</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Purple</item>
        <item>Orange</item>
    </string-array>

    <string-array name="kitchen_items">
        <item>Fridge</item>
        <item>Freezer</item>
        <item>Microwave</item>
        <item>Light</item>

    </string-array>

</resources>
