<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_garage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="guthboss.com.finalproject.Garage">


    <TextView
        android:id="@+id/garageDoor"
        android:text="@string/garageDoor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/tb_light"
        android:layout_alignEnd="@+id/garageLight"
        />

    <TextView
        android:id="@+id/garageLight"
        android:text="@string/garageLight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        />

    <ImageView
        android:id="@+id/light_OnOff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tb_light"
        android:layout_toEndOf="@+id/tb_door"
        android:layout_alignTop="@+id/garageLight"
        android:src="@drawable/lightoff"
        />

    <ImageView
        android:id="@+id/door_OpenClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/tb_door"
        android:layout_alignEnd="@+id/light_OnOff"
        android:layout_alignTop="@+id/garageDoor"
        android:layout_toEndOf="@+id/tb_door"
        android:src="@drawable/doorclose"
        />

    <ToggleButton
        android:id="@+id/tb_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="light_click"
        android:textOff="@string/lightOn"
        android:textOn="@string/lightOff"
        android:layout_below="@+id/garageLight"
        android:layout_alignStart="@+id/garageLight"
        />

    <Button
        android:text="@string/garageBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/garageBack"
        android:layout_below="@+id/tb_door"
        android:layout_marginTop="270dp"
        />

    <ToggleButton
        android:id="@+id/tb_door"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="door_click"
        android:textOff="@string/textOff"
        android:textOn="@string/textOn"
        android:layout_below="@+id/garageDoor"
        android:layout_alignEnd="@+id/garageDoor" />

</RelativeLayout>
